Clipper: Fixes to get it working in Firefox

--- a/Clipper/joplin-webclipper/popup/src/App.css
+++ b/Clipper/joplin-webclipper/popup/src/App.css
@@ -131,6 +131,8 @@
 .App .StatusBar .Led {
 	display: flex;
 	flex: 0;
+	width: 8px;
+	height: 8px;
 }
 
 .App .StatusBar .ServerStatus {
